@@ -35,7 +35,8 @@
 }
 
 
-adjacent <- function(x, cells, directions=4, pairs=TRUE, target=NULL, sorted=FALSE, include=FALSE, id=FALSE) {
+setMethod("adjacent", signature(x="BasicRaster"), 
+function(x, cells, directions=4, pairs=TRUE, target=NULL, sorted=FALSE, include=FALSE, id=FALSE, ...) {
 
 	if (is.character(directions)) { 
 		directions <- tolower(directions) 
@@ -154,4 +155,6 @@ adjacent <- function(x, cells, directions=4, pairs=TRUE, target=NULL, sorted=FAL
 	}
 	d
 }
+)
+
 
