@@ -7,10 +7,10 @@
 
 if (!isGeneric('subset')) {
 	setGeneric('subset', function(x, ...)
-		standardGeneric('subset')) 
+		standardGeneric('subset'))
 }
 
-setMethod('subset', signature(x='RasterStack'), 
+setMethod('subset', signature(x='RasterStack'),
 function(x, subset, drop=TRUE, filename='', ...) {
 	if (is.character(subset)) {
 		i <- stats::na.omit(match(subset, names(x)))
@@ -25,18 +25,24 @@ function(x, subset, drop=TRUE, filename='', ...) {
 	if (! all(subset %in% 1:nlayers(x))) {
 		stop('not a valid subset')
 	}
+
+	if (length(x@z) > 0) {
+	    z <- lapply(x@z, function(x) x[subset])
+	} else {
+	    z <- list()
+	}
+	
 	if (length(subset) == 1 & drop) {
 		x <- x@layers[[subset]]
 	} else {
 		x@layers <- x@layers[subset]
-		if (length(x@z)>0) {
-			x@z <- lapply(x@z, function(x) x[subset])
-		}
 	}
+	x@z <- z
+
 	if (filename != '') {
 		x <- writeRaster(x, filename, ...)
 	}
-	return(x)	
+	return(x)
 } )
 
 
@@ -53,40 +59,33 @@ function(x, subset, drop=TRUE, filename='', ...) {
 		}
 		subset <- i
 	}
-	
+
 	subset <- as.integer(subset)
 	nl <- nlayers(x)
 	if (! all(subset %in% 1:nl)) {
 		stop('not a valid subset')
 	}
-	
+
 	# now _after_ checking for valid names and adding the possibility to
-	# subset a RasterLayer multiple times. Fixed/suggested by Benjamin Leutner 
+	# subset a RasterLayer multiple times. Fixed/suggested by Benjamin Leutner
 	if (inherits(x, 'RasterLayer')) {
-		if (length(subset) > 1) { 
-			x <-  stack(lapply(subset, function(...) x))
+		if (length(subset) > 1) {
+		  x <-  stack(lapply(subset, function(...) x))
 		}
 		if (filename != '') {
 			x <- writeRaster(x, filename, ...)
 		}
 		return(x)
 	}
-	
-	
-	
-	#if (nl==1) {return(x)} # this does not drop
-	
-	# probably not needed any more, due to removing 
-	# the filename function below 
-	#varname <- attr(x@data, "zvar")
-	#if (is.null(varname)) { 
-	#	varname <- "" 
-	#}
 
-	# these values may have been changed
-	# really? how?
 	nav <- NAvalue(x)
 	e <- extent(x)
+
+	if (length(x@z)>0) {
+		z <- lapply(x@z, function(x) x[subset])
+	} else {
+		z <- list()
+	}
 	
 	if (fromDisk(x)) {
 		nms <- names(x)
@@ -105,20 +104,20 @@ function(x, subset, drop=TRUE, filename='', ...) {
 			} else {
 				x <- raster(x)
 			}
+
+			x@z <- z
 			extent(x) <- e
 			NAvalue(x) <- nav
-			return(x)	
+			return(x)
 		}
-	
+
 		if (hasValues(x)) {
 			x@data@values <- x@data@values[, subset, drop=FALSE]
 			x@data@min <- x@data@min[subset]
 			x@data@max <- x@data@max[subset]
-		}	
-		x@data@names <- x@data@names[subset]
-		if (length(x@z) > 0) {
-			x@z[[1]] <- x@z[[1]][subset]
 		}
+		x@data@names <- x@data@names[subset]
+		x@z <- z
 		x@data@nlayers <- as.integer(length(subset))
 		f <- is.factor(x)
 		if (any(f)) {
@@ -130,6 +129,7 @@ function(x, subset, drop=TRUE, filename='', ...) {
 		x <- writeRaster(x, filename, ...)
 	}
 	x
-} )
+} 
+)
 
 
